# udp_pystreamer

./: .buildinfo  .gitignore  CNAME  MANIFEST.in  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: check.yml  doc.yml
docs/: conf.py  index.rst
udp_pystreamer/: __init__.py  udp_pystreamer.py
