[metadata]
name = udp_pystreamer
version = 0.0.1
author = Gabriel Duque
author_email = gabriel@zuh0.com
description = a simple script to stream a file over UDP
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
zip_safe = true

[options.entry_points]
console_scripts =
   udp_pystreamer = udp_pystreamer.udp_pystreamer:__main

[options.extras_require]
dev =
   black
   mypy
doc =
   sphinx

[build_sphinx]
project = udp_pystreamer
source-dir = docs
build-dir  = docs/build
